--- a/HTML/assets/less/textbook.less
+++ b/HTML/assets/less/textbook.less
@@ -244,12 +244,14 @@
 	}
 	.meta.area{
 		width: 15%;
+    word-break: break-all;
 	}
 	.meta{
 		//width: 210px;
 		width: 20%;
 		padding: 0 2% 0 2%;
 		float: left;
+    word-break: break-all;
 		}
 	.img_wrapper{
 		//width: 125px;
