--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -287,6 +287,14 @@ textarea.error, .select2-choice.error {
 	margin: 4px 4px 4px 0;
 }
 
+.textbook-filter, .selectFilter{
+	width: 160px;
+	margin-right: 5px;
+	&:last-child{
+		margin-right: 0;
+	}
+}
+
 #breadcrumb-region{
 	display: none;
 }
@@ -294,6 +302,17 @@ textarea.error, .select2-choice.error {
 #main-content-region, #content-display-region{
 	&>.row{
 		margin: 0;
+	}
+}
+
+.tablesorter-header-inner{
+	font-size: 14px;
+	cursor: pointer;
+}
+
+#content-pieces-table{
+	a{
+		text-decoration: underline;
 	}
 }
 
@@ -322,7 +341,9 @@ label, input, button, select, textarea{
 .label{
 	font-size: 14px;
 	display: inline-block;
-	padding: 6px 9px;
+	padding: 7px 9px;
+	min-width: 100px;
+	border-radius: 0;
 }
 
 .alert{
@@ -372,7 +393,9 @@ ol {
 	font-size: 16px;
 }
 .table td{
-	font-size: 15px;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 14px 12px !important;
 }
 
 .progress{
@@ -385,9 +408,6 @@ ol {
 	}
 }
 
-.table-hover tbody tr:hover > td, .table-hover tbody tr:hover > th{
-	background-color: transparent;
-}
 
 .teacher-app{
 	.grid{
