--- a/HTML/assets/less/modules/message_notifications.less
+++ b/HTML/assets/less/modules/message_notifications.less
@@ -323,24 +323,29 @@
     color: #5E5E5E;
 }
 .label-success, .badge-success {
-    background-color: @color-success;
-    color:  @color-white ;
+    background-color: @color-white;
+    color:  @color-success ;
+    border: 1px solid @color-success;
 }
 .label-warning, .badge-warning {
-    background-color: @color-warning;
-    color:  @color-white ;
+    background-color: @color-white;
+    color:  @color-warning ;
+    border: 1px solid @color-warning;
 }
 .label-important, .badge-important {
-    background-color: @color-important;
-    color:  @font-color-important ;
+    background-color: @font-color-important;
+    color:  @color-important ;
+    border: 1px solid @color-important;
 }
 .label-danger, .badge-danger {
-    background-color: @color-danger;
-    color:  @font-color-danger ;
+    background-color: @font-color-danger;
+    color:  @color-danger ;
+    border: 1px solid @color-danger;
 }
 .label-info, .badge-info {
-    background-color: @color-info;
-    color:  @color-white ;
+    background-color: @color-white;
+    color:  @color-info ;
+    border: 1px solid @color-info;
 }
 .label-inverse, .badge-inverse {
     background-color: #1f3853;
