position of progress bar changed

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -157,7 +157,7 @@
 @media (min-width: 1020px) and (max-width:1295px){
 	#content-board{
 		margin: 0;
-		margin-top: 15px;
+		// margin-top: 15px;
 	}
 	#myCanvas{
 		margin: 0;
@@ -212,6 +212,9 @@
 }
 
 #module-details-region{
+	-webkit-overflow-scrolling: touch;
+	-webkit-transform: translateZ(0px);
+	-webkit-transform: translate3d(0,0,0);
 	
 	&.condensed{
 		position: fixed;
