--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -12,8 +12,8 @@
     <p>{{subjects}}</p>
 </div>
 
-<div class="meta modules rec">
-    <p>0 of {{modules_count}}</p>
-</div>
+<!--<div class="meta modules rec">-->
+    <!--<p>{{modules_completed}} of {{modules_count}}</p>-->
+<!--</div>-->
 
 <div class="clearfix"></div>
