textbook and chapter status changes

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -12,8 +12,11 @@
     <p>{{subjects}}</p>
 </div>
 
-<!--<div class="meta modules rec">-->
-    <!--<p>{{modules_completed}} of {{modules_count}}</p>-->
-<!--</div>-->
+<div class="meta modules rec">
+    <p>Total Chapters: {{chapter_count}}<br>
+       Completed: {{chapters_completed}}<br>
+       In Progress: {{chapters_in_progress}}<br>
+       Not Started: {{chapters_not_started}}<br></p>
+</div>
 
 <div class="clearfix"></div>
