module description styles

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -316,10 +316,19 @@ textarea.error, .select2-choice.error {
 	}
 }
 
+#take-class-modules{
+	th:nth-child(3){
+		width: 100px;
+	}
+	th:last-child{
+		width: 40%;
+	}
+}
+
 /*Theme Modifications*/
 body{
-	font-size: 18px;
-	font-weight: bold;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 select{
