--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
@@ -10,62 +10,50 @@
             It is designed to help you train for the class</span></h4>
 </div>
 {{/isTraining}}
-<div class='tiles white grid simple vertical green animated fadeIn'>
-    <div class="grid-title no-border">
-        <h4 class="">{{name}}</h4>
+<div class='tiles white grid simple animated fadeIn'>
+    <div class="grid-title">
+        <h4 class="no-margin">{{name}}</h4>
 
         <!-- <div class="tools">
             <a href="javascript:;" class="collapse"></a>
         </div> -->
     </div>
-    <div class="grid-body no-border" style="overflow: hidden; display: block;">
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+    <div class="grid-body" style="overflow: hidden; display: block;">
+        <div class="row m-b-10">
+            <div class="col-md-6 b-r b-grey">
                     <label class="form-label">Objective</label>
                     {{description.objective}}
-                </div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Physical Requirements</label>
-                    {{description.physical_requirements}}
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Textbook</label>
-                    {{getTextbookName}}
-                </div>
-            </div>
-        </div>
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+            <div class="col-md-6">
                     <label class="form-label">Description</label>
                     {{description.description}}
-                </div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+            
+        </div>
+        <div class="row m-b-10">
+            <div class="col-md-6 b-r b-grey">
+                    <label class="form-label">Physical Requirements</label>
+                    {{description.physical_requirements}}
+            </div>
+            <div class="col-md-6">
                     <label class="form-label">Electronic Requirements</label>
                     {{description.electionic_requirements}}
-                </div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Chapter</label>
-                    {{getChapterName}}
-                </div>
-            </div>
+            
         </div>
         <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+            <div class="col-md-6 b-r b-grey">
+                    <label class="form-label">Textbook</label>
+                    {{getTextbookName}}
+            </div>
+            <div class="col-md-6">
+                    <label class="form-label">Chapter</label>
+                    {{getChapterName}}
+            </div>
+            <!-- <div class="col-md-4">
                     <label class="form-label">Duration</label>
                     {{duration}} {{minshours}}
-                </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
