--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-display/templates/content-display.html
@@ -3,7 +3,7 @@
 	<time class="cbp_tmtime" datetime="">
 	    <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
 	</time>
-	<div class="cbp_tmicon primary animated bounceIn"> <i class="fa fa-question"></i> </div>
+	<div class="cbp_tmicon info animated bounceIn"> <span class="fa fa-question"></span> </div>
 	<div class="cbp_tmlabel">
 		<div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
 			<div class="tools"> <a href="#content-piece-config" data-toggle="modal" class="config"></a> <a href="javascript:;" class="remove"></a> </div>
