--- a/HTML/assets/less/modules/timeline.less
+++ b/HTML/assets/less/modules/timeline.less
@@ -31,7 +31,7 @@
                 display: block;
             }
             .time {
-                font-size: 1.4em;
+                font-size: 1.3em;
                 color: #505458;
                 display: block;
             }
@@ -93,7 +93,7 @@
             left: 20%;
             top: 0;
             margin: 0 0 0 -25px;
-            font-size: 1.3em;
+            font-size: 1em;
             &.success {
                 background: @color-success + @light;
                 box-shadow: 0 0 0 8px @color-success + @medium;
@@ -115,9 +115,9 @@
                 color:  @color-white ;
             }
             &.info {
-                background: @color-info + @light;
-                box-shadow: 0 0 0 8px @color-info + @medium;
-                color:  @color-white ;
+                background: @color-white;
+                box-shadow: 0 0 0 8px @color-info + @light;
+                color:  @color-info + @light ;
             }
         }
     }
