chapter status in textbook list

--- a/HTML/assets/less/textbook.less
+++ b/HTML/assets/less/textbook.less
@@ -39,7 +39,7 @@
       display: inline-block;
       width: 205px;
       text-align: center;
-      line-height: 99px;
+      line-height: 110px;
       border-left: 1px solid lighten(@color-grey, 25%);
       height: 100%;
       vertical-align: top;
@@ -215,7 +215,7 @@
 	.mix{
 		background-color: lighten(@preview-grey, 3%);
 		cursor: pointer;
-		height: 120px;
+		min-height: 120px;
     margin-bottom: 10px;
     border-bottom: none;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
@@ -267,7 +267,7 @@
     }
 	}
 	.titles{
-		vertical-align: top;
+		// vertical-align: top;
 		width: 70%;
 		//float: left;
 		word-break: break-word;
