--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
@@ -1,29 +1,23 @@
 <div class="tiles white grid simple vertical green">
-	<div class="grid-title no-border">
-		<h4 class="">{{showClassLabel}}</h4>
+	<div class="grid-title">
+		<h4 class="no-margin">{{showClassLabel}}</h4>
 		<!-- <div class="tools">
 			<a href="javascript:;" class="collapse"></a>
 		</div> -->
 		</div>
-		<div class="grid-body no-border" style="overflow: hidden; display: block;">
+		<div class="grid-body" style="overflow: hidden; display: block;">
 		<div class="row ">
-			<div class="col-md-4">
-			    <div class="margin-bottom-20 ">
+			<div class="col-md-3 b-grey b-r">
 					<label class="form-label">Number of Students</label>
 					{{showNoOfStudents}}
-				</div>
 			</div>
-			<div class="col-md-4">
-			    <div class="margin-bottom-20 ">
+			<div class="col-md-5">
 					<label class="form-label">Subjects</label>
 					{{showSubjectsList}}
-				</div>
 			</div>
 			<div class="col-md-4">
-			    <div class="margin-bottom-20 ">
 					<!-- <label class="form-label">Physical Requirements</label>
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry. -->
-				</div>
 			</div>												 
 		</div>
 	</div>
