--- a/HTML/assets/less/teacher.less
+++ b/HTML/assets/less/teacher.less
@@ -83,6 +83,14 @@ ul.classes{
 	}
 }
 
+.chapStatus{
+	width: 33%;
+	padding: 0 4px;
+	text-align: center;
+	float: left;
+	font-weight: 600;
+}
+
 
 /*Modules Table*/
 .moduleList{
