--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -13,10 +13,10 @@
 </div>
 
 <div class="meta modules rec">
-    <p>Total Chapters: {{chapter_count}}<br>
-       Completed: {{chapters_completed}}<br>
-       In Progress: {{chapters_in_progress}}<br>
-       Not Started: {{chapters_not_started}}<br></p>
+    <h4 class="b-grey b-b p-b-10 m-t-20 m-b-10">Total Chapters: {{chapter_count}}</h4>
+      <div class="chapStatus text-success"><h5 class="no-margin">Completed</h5> {{chapters_completed}}</div>
+      <div class="chapStatus text-info"><h5 class="no-margin">In Progress</h5> {{chapters_in_progress}}</div>
+      <div class="chapStatus text-error"><h5 class="no-margin">Not Started</h5> {{chapters_not_started}}</div>
 </div>
 
 <div class="clearfix"></div>
