--- a/HTML/assets/less/teacher.less
+++ b/HTML/assets/less/teacher.less
@@ -51,7 +51,7 @@ ul.classes{
 		padding: 10px;
 		font-size: 21px;
 		// color: darken(@color-info, 10%);
-		color: darken(@preview-grey, 40%);
+		// color: darken(@preview-grey, 40%);
 		&:hover{
 			border: 3px solid darken(@preview-grey, 10%);
 			background: @color-info;
