--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -15,7 +15,7 @@
 
 			<ul style="display:none" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
 				<li class="dropdown">
-					<a class="" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
+					<a class="btn btn-small btn-primary" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
 					</a>
 				</li>		 
 			</ul>
