--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/modules-listing/templates/content-modules-list-tmpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/modules-listing/templates/content-modules-list-tmpl.html
@@ -1,5 +1,5 @@
 <div class="grid-title">
-    <h4>List of <span class="semi-bold">Training Modules</span></h4>
+    <h3 class="m-t-5 m-b-5">List of <span class="semi-bold">Training Modules</span></h3>
 </div>
 <div class="grid-body ">
     <div class="row">
@@ -23,9 +23,9 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <h4><span class="semi-bold">All</span> Modules</h4>
+            <!-- <h4><span class="semi-bold">All</span> Modules</h4> -->
 
-            <table class="table table-striped" id="content-pieces-table" >
+            <table class="table table-bordered m-t-10" id="content-pieces-table" >
                 <thead>
                 <tr>
                     <!--<th style="width:4%"><div id="check_all_div" class="checkbox check-default" style="margin-right:auto;margin-left:auto;">
