difficulty level filter added

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -1,7 +1,7 @@
 {{#isStudentQuestion}}
 <ul class="nav nav-tabs" id="subProps">
     <li class="active" id="settings-tab"><a class="tabs" href="#settings-tab-pane">Settings</a></li>
-    <li class="" id="more-tab"><a class="tabs" href="#more-tab-pane">More</a></li>
+    <li class="" id="more-tab"><a class="tabs" href="#more-tab-pane">Hints and comments</a></li>
 </ul>
 {{/isStudentQuestion}}
 <form name="contentpiece-settings">
