--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -19,6 +19,12 @@
                         <option value="student_question">Student Question</option>
                         <option value="content_piece">Content Piece</option>
                     </select>
+                    <select class="select2-filters selectFilter difficulty-level-filter" style="display: none;" id="difficulty-level-filter">
+                        <option value="">All Levels</option>
+                        <option value="1">Level 1</option>
+                        <option value="2">Level 2</option>
+                        <option value="3">level 3</option>
+                    </select>
                 </div>
             </div>
         </div>
