main loader change, add module layout change, creator fixes

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -353,6 +353,10 @@ label, input, button, select, textarea{
 	padding: 7px 9px;
 	min-width: 100px;
 	border-radius: 0;
+	&.tag.label-info{
+		min-width: 0;
+		color: @color-info;
+	}
 }
 
 .alert{
