fib show all answers and hotspot hide color on transparent

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
@@ -17,7 +17,7 @@
 				<input id="individual-marks" type="text" value="{{marks}}" class="form-control">
 			</div>
 
-			<div class="form-group inline m-t-20">
+			<div class="form-group inline m-t-20 option-color">
 				Color  <input type="hidden" id="hidden-input" class="fontColor" value="#1a45a1">
 			</div>
 
