logged in username display and play audio from local directory

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -5,6 +5,7 @@
                     <div class="row">
 
                       <div class="col-sm-12 b-b b-grey p-b-10 m-b-5">
+                        <h3 id="userName"class="semi-bold text-center"></h3>
                         <h3 class="semi-bold text-center">Data Sync</h3>
 
                         <div id="totalRecords" class="row">
