--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
@@ -1,6 +1,6 @@
-<button type="button" id="go-back-button" class="btn btn-white btn-cons">
+<button type="button" id="go-back-button" class="btn btn-white btn-cons m-t-10">
     <h4 class="bold  text-info no-margin">
-        <i class="fa fa-chevron-left"></i>
+        <span class="fa fa-arrow-circle-left"></span>
         List of Modules
     </h4>
 </button>
@@ -12,7 +12,23 @@
 {{/isTraining}}
 <div class='tiles white grid simple animated fadeIn'>
     <div class="grid-title">
-        <h4 class="no-margin">{{name}}</h4>
+        <div class="row">
+            <div class="col-md-6">
+                <h3 class="no-margin semi-bold">{{name}}</h3>
+            </div>
+            <div class="col-md-6 b-l b-grey small-text">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label class="form-label text-grey">Textbook</label>
+                            {{getTextbookName}}
+                        </div>
+                    <div class="col-md-6">
+                        <label class="form-label text-grey">Chapter</label>
+                            {{getChapterName}}
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- <div class="tools">
             <a href="javascript:;" class="collapse"></a>
@@ -30,7 +46,7 @@
             </div>
             
         </div>
-        <div class="row m-b-10">
+        <div class="row">
             <div class="col-md-6 b-r b-grey">
                     <label class="form-label">Physical Requirements</label>
                     {{description.physical_requirements}}
@@ -38,17 +54,6 @@
             <div class="col-md-6">
                     <label class="form-label">Electronic Requirements</label>
                     {{description.electionic_requirements}}
-            </div>
-            
-        </div>
-        <div class="row ">
-            <div class="col-md-6 b-r b-grey">
-                    <label class="form-label">Textbook</label>
-                    {{getTextbookName}}
-            </div>
-            <div class="col-md-6">
-                    <label class="form-label">Chapter</label>
-                    {{getChapterName}}
             </div>
             <!-- <div class="col-md-4">
                     <label class="form-label">Duration</label>
