Corrected "Start Training" spelling on teachers dashboard

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -1,6 +1,6 @@
 <div id="teacherOptns">
     <h3><a href="#take-class-region" class="active">Take a Class</a></h3>
-    <h3 class=""><a href="#start-training-region">Start Traning</a></h3>
+    <h3 class=""><a href="#start-training-region">Start Training</a></h3>
     <h3 class=""><a href="#class-progress-region">Class Progress</a></h3>
 </div>
 
