list of modules view fixes, menu slide animation fix

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -316,7 +316,7 @@ textarea.error, .select2-choice.error {
 	}
 }
 
-#take-class-modules{
+#take-class-modules.takeClass{
 	th:nth-child(3){
 		width: 100px;
 	}
