--- a/HTML/assets/less/modules/layout.less
+++ b/HTML/assets/less/modules/layout.less
@@ -64,6 +64,11 @@ body {
 }
 .header-seperation {
     background-color: #22262e;
+    -webkit-transition: all 0.28s ease-in-out;
+    -moz-transition: all 0.28s ease-in-out;
+    -o-transition: all 0.28s ease-in-out;
+    -ms-transition: all 0.28s ease-in-out;
+    transition: all 0.28s ease-in-out;
 }
 .header {
     padding: 0 !important;
@@ -378,6 +383,11 @@ body {
     background-color: #1b1e24 !important;
     height: 100%;
     font-family: @base-font-family;
+    -webkit-transition: all 0.28s ease-in-out;
+    -moz-transition: all 0.28s ease-in-out;
+    -o-transition: all 0.28s ease-in-out;
+    -ms-transition: all 0.28s ease-in-out;
+    transition: all 0.28s ease-in-out;
     .outer-tab-nav-section {
         display: inline-block;
         width: 45px;
