Added error handlers for request time out errors

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -33,9 +33,6 @@
                               
                               <h5 id="syncError" class="m-t-5 semi-bold text-center text-error" style="display:none">Error</h5>
 
-                              <div style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn"><span class="fa-exclamation-trianglea fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
-                              </div>
-
                             </div>
                           </div>
                         </div>
@@ -68,6 +65,13 @@
 
                         </div>
 
+                      </div>
+
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <div id="syncInternetConnection" style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated"><span class="fa-exclamation-trianglea fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
+                          </div>
+                        </div>
                       </div>
 
                       <div class="row">
