module status field changed to post_status to avoid confusion between the actual status of the content module and the status with regards to taking of the module

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <label class="form-label">Status</label>
-                <select required name="status" id="status" class="form-control select2" >
+                <select required name="post_status" id="status" class="form-control select2" >
                     {{#statusOptions}}
                         <option value="{{value}}" {{statusSelected}}>{{name}}</option>
                     {{/statusOptions}}
