--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/modules-listing/templates/content-modules-list-tmpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/modules-listing/templates/content-modules-list-tmpl.html
@@ -9,7 +9,7 @@
 
                     <span id="textbook-filters"></span>
 
-                    <select class="select2-filters" id="content-status-filter" style="width:150px">
+                    <select class="select2-filters" id="content-post-status-filter" style="width:150px">
                         <option value="">All Status</option>
                         <option value="underreview">Under Review</option>
                         <option value="publish">Published</option>
