status changed to post_status

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-description/templates/quiz-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-description/templates/quiz-details.html
@@ -21,7 +21,7 @@
     <div class="col-md-4">
         <div class="margin-bottom-20 ">
             <label class="form-label">Status</label>
-            <select name="status" id="status" class="form-control">
+            <select name="post_status" id="status" class="form-control">
                 <option value="underreview">Under Review</option>
                 <option value="publish">Published</option>
                 <option value="archive">Archived</option>
