add module content selection table height fix

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -325,6 +325,10 @@ textarea.error, .select2-choice.error {
 	}
 }
 
+.table-fixed-layout td.cpHeight{
+	white-space: normal;
+}
+
 /*Theme Modifications*/
 body{
 	font-size: 20px;
