--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2512,6 +2512,9 @@ textarea.error,
 #take-class-modules.takeClass th:last-child {
   width: 40%;
 }
+.table-fixed-layout td.cpHeight {
+  white-space: normal;
+}
 /*Theme Modifications*/
 body {
   font-size: 20px;
