prepopulate filters for add/edit module content piece present in modules column done

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
@@ -15,6 +15,7 @@
                         <option value="teacher_question">Teacher Question</option>
                         <option value="content_piece">Content Piece</option>
                     </select>
+
                 </div>
             </div>
         </div>
@@ -34,7 +35,8 @@
                     </div>
                     </th>
                     <th>Question</th>
-                    <th>Author</th>
+                    <th>Content Type</th>
+                    <th>Present in training module</th>
                     <th>Last Modified</th>
                 </tr>
                 </thead>
