--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -38,8 +38,8 @@
             <table class="table table-bordered m-t-15" id="content-pieces-table" >
                 <thead>
                 <tr>
-                    <th style="width:30%">Excerpt</th>
-                    <th>Author</th>
+                    <th>Excerpt</th>
+                    <th>Present in training module</th>
                     <th>Textbook</th>
                     <th>Chapter</th>
                     <th>Last Modified</th>
