--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/content-selection/templates/content-selection.html
@@ -7,15 +7,15 @@
 <div class="grid-body no-border contentSelect" style="overflow: hidden; display: block;">
     <div class="row">
         <div class="col-xs-12">
-            <div class="">
+            <div class="filters">
                 <div class="table-tools-actions">
                     <span id="textbook-filters"></span>
-                    <select class="form-control inline" id="content-type-filter" style="width:150px" tabindex="-1">
-                        <option value="">All</option>
-                        <option value="teacher_question">Teacher Question</option>
-                        <option value="content_piece">Content Piece</option>
-                        <option value="student_question">Student Question</option>
-                    </select>
+                    <!--<select class="form-control inline" id="content-type-filter" style="width:150px" tabindex="-1">-->
+                        <!--<option value="">All</option>-->
+                        <!--<option value="teacher_question">Teacher Question</option>-->
+                        <!--<option value="content_piece">Content Piece</option>-->
+                        <!--<option value="student_question">Student Question</option>-->
+                    <!--</select>-->
                 </div>
             </div>
         </div>
@@ -64,6 +64,7 @@
                                 </select>
                             </div>                        </div>
                     </div>
+                    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button>
                 </div>
                 <div class="tab-pane active" id="addSet">
                     <div class="row">
@@ -75,19 +76,17 @@
                                     <th>Level 1</th>
                                     <th>Level 2</th>
                                     <th>Level 3</th>
-                                    <th>Level 4</th>
-                                    <th>Level 5</th>
+
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>15 <input type="text" class="spinedit disabled" disabled="disabled">
+                                    <td> <input type="text" id="total-questions" class="spinedit disabled" disabled="disabled" value="0">
                                     </td>
-                                    <td>3 <input type="text" id="lvl1" /></td>
-                                    <td>3 <input type="text" id="lvl2" /></td>
-                                    <td>3 <input type="text" id="lvl3" /></td>
-                                    <td>3 <input type="text" id="lvl4" /></td>
-                                    <td>3 <input type="text" id="lvl5" /></td>
+                                    <td class="level-selection" id="lvl1"><span></span> <input type="text"  /></td>
+                                    <td class="level-selection" id="lvl2"><span></span> <input type="text"  /></td>
+                                    <td class="level-selection" id="lvl3"><span></span> <input type="text" /></td>
+
                                 </tr>
                                 </tbody>
                             </table>
@@ -96,7 +95,7 @@
                                 <label for="selectAll" class="text-grey">Select All</label>
                             </div>
                             <div class="pull-right">
-                                <button type="button" class="btn btn-success btn-cons2"><i class="fa fa-plus"></i> Add</button>
+                                <button type="button" class="btn btn-success btn-cons2" id="add-set-button"><i class="fa fa-plus"></i> Add</button>
                             </div>
                         </div>
                     </div>
