--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -1,5 +1,5 @@
 <form name="content-collection-form" id="content-collection-form">
-	<div class="grid-title"><h3>Add <span class="semi-bold">Module</span></h3>
+	<div class="grid-title"><h3>{{heading}} <span class="semi-bold">Module</span></h3>
 	</div>
 	<div class="grid-body" style="overflow: hidden; display: block;">
 		<div class="row m-b-10">
