content pieces list view fix, multiple eval attributes wrapping fix

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -311,7 +311,10 @@ textarea.error, .select2-choice.error {
 }
 
 #content-pieces-table{
-	a{
+	th:first-child{
+		width: 28%;
+	}
+	th:last-child a{
 		text-decoration: underline;
 	}
 }
