--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -154,14 +154,22 @@
 	padding: 10px 10px 10px 20px;
 }
 
+#eval-parameters{
+	max-width: 760px;
+	margin: 0 auto;
+}
+
 @media (min-width: 1020px) and (max-width:1295px){
 	#content-board{
 		margin: 0;
 		// margin-top: 15px;
 	}
-	#myCanvas{
+	#myCanvas, #eval-parameters{
 		margin: 0;
 		margin-left: auto;
+	}
+	#eval-parameters{
+		max-width: 755px;
 	}
 	#top-panel{
 		float: left;
@@ -250,6 +258,7 @@
 .parameters{
 	.btn{
 		white-space: normal;
+		word-break: break-word;
 	}
 }
 
