--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -162,7 +162,7 @@
 		padding:0;
 		li{
 			float: left;
-			border: 2px solid #e5e9ec;
+			border: 2px solid @body-bg;
 			background:@color-white;
 			width: 92px;
 			height: 56px;
@@ -634,6 +634,42 @@
 	.bicon{
 		font-size: 50px;
 		color: @body-bg;
+	}
+}
+
+.vjs-poster{
+	height: auto;
+}
+
+.video-js{
+	background-color: lighten(@preview-grey, 2%);
+	border: 2px solid @body-bg;
+}
+
+.playlistToggle{
+	position: relative;
+	top: -45px;
+	left: 10px;
+	z-index: 999;
+}
+
+.playlistHover{
+	background-color: lighten(@preview-grey, 2%);
+	border: 2px solid @body-bg;
+	border-top: none;
+	padding: 10px 0;
+}
+.playlist-video{
+	width: 49%;
+	float: left;
+	background-color: @color-white;
+	border: 2px solid @body-bg;	
+	margin: 2px;
+	text-align: center;
+	cursor: pointer;
+	&.currentVid{
+		color: @color-info;
+		font-weight: 600;
 	}
 }
 
