--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -2,37 +2,35 @@
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
 		<div class="row">
 			<div class="well m-b-10 col-sm-2">
-				<h3 class="bold text-info">{{name}}</h3>
-				<label class="form-label bold small-text">Quiz Level: 12</label>
-                	
+				<h3 class="bold text-info">{{name}}</h3>                	
 			</div>
 			<div class="col-sm-10">
 			  <div class="row  m-b-10">
                 <div class="col-xs-4 b-grey b-r">
                 	<label class="form-label bold small-text">Class</label>
-					4
+					{{getClass}}
                 </div>
                 <div class="col-xs-4 b-grey b-r">
                  	<label class="form-label bold small-text">Textbook</label>
-					Science			                  
+					{{getTextbookName}}			                  
                 </div>
                 <div class="col-xs-4">
                 	<label class="form-label bold small-text">Chapter</label>
-					Internal Organs of the Body
+					{{getChapterName}}
                 </div>
               </div>
               <div class="row">
                 <div class="col-xs-4 b-grey b-r">
                 	<label class="form-label bold small-text">Section</label>
-					Internal & External
+					{{getSectionsNames}}
                 </div>
                 <div class="col-xs-4 b-grey b-r">
                 	<label class="form-label bold small-text">Sub-Section</label>
-					-			                  
+					{{getSubSectionsNames}}	                  
                 </div>
                 <div class="col-xs-4">
                 	<label class="form-label bold small-text">Time on question</label>
-	                	<i class="fa fa-clock-o"></i> 12m 08s
+	                	<i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> m
                 </div>
               </div>
   			</div>
