--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
@@ -1,11 +1,11 @@
 <div class="modProgress h-center">
 	<p class="bold small-text m-b-5 p-t-10 text-center">Questions Answered</p>
 		<div class="progress progress-large m-b-10">
-		<div data-percentage="{{progressPercentage}}%" style="width: {{progressPercentage}}%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100">{{answeredQuestions}}/{{totalQuestions}}</div>
+		<div id="quiz-progress-bar" data-percentage="0%" style="width: 0%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span id="answered-questions">0</span>/{{totalQuestions}}</div>
 	</div>
 </div>
 <div class="text-center small-text p-t-10 m-t-5 p-b-10 b-grey b-t skipped">
-	Questions Skipped: 2
+	Questions Skipped: <span id="skipped-questions">0</span>
 </div>
 <div class="quizSteps">
 	<ul id="quiz-items">
