quiz description html changed to replicate style of teaching module description content module type saved as teaching-module to differentiate from quiz skip button removed after submission of answer

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -1,32 +1,44 @@
-<div class="tiles white grid simple vertical green">
-    <div class="grid-title no-border">
-        <h4 class="">{{name}}</h4>
-        <div class="tools">
-            <a href="javascript:;" class="collapse"></a>
-        </div>
+<div class="tiles white grid simple animated fadeIn'">
+    <div class="grid-title">
+        <div class="row">
+            <div class="col-md-6">
+                <h3 class="no-margin semi-bold">{{name}}</h3>
+            </div>
+            <div class="col-md-6 b-l b-grey small-text">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label class="form-label text-grey">Textbook</label>
+                            {{getTextbookName}}
+                        </div>
+                    <div class="col-md-6">
+                        <label class="form-label text-grey">Chapter</label>
+                            {{getChapterName}}
+                    </div>
+                </div>
+            </div>
+        </div>        
     </div>
-    <div class="grid-body no-border" style="overflow: hidden; display: block;">
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+    
+    <div class="grid-body" style="overflow: hidden; display: block;">
+        <div class="row m-b-10">
+            <div class="col-md-3 b-r b-grey">
                     <label class="form-label">No. of Questions</label>
                     10
-                </div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+            <div class="col-md-3 b-r b-grey">
                     <label class="form-label">Duration</label>
                     {{total_minutes}} mins
-                </div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
+            <div class="col-md-3 b-r b-grey">
                     <label class="form-label">Marks</label>
                     {{marks}}
-                </div>
-            </div>                                               
+            </div>
+            <div class="col-md-3">
+                    
+            </div>
         </div>
     </div>
+    
 </div>
 <div class="tiles white grid simple vertical blue">
     <div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
