--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-content-display/templates/quiz-content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-content-display/templates/quiz-content-display.html
@@ -18,7 +18,7 @@
 </div>
 {{/isContentPiece}}
 {{#isSet}}
-<div class="contentPiece" data-id="{{id}}">
+<div class="contentPiece setGroup" data-id="{{id}}">
     <time class="cbp_tmtime" datetime="">
         <span class="time"><span class="semi-bold">{{id}}</span></span>
     </time>
