--- a/HTML/assets/less/modules/timeline.less
+++ b/HTML/assets/less/modules/timeline.less
@@ -95,24 +95,24 @@
             margin: 0 0 0 -25px;
             font-size: 1em;
             &.success {
-                background: @color-success + @light;
+                background: @color-white;
                 box-shadow: 0 0 0 8px @color-success + @medium;
-                color:  @color-white ;
+                color:   @color-success + @light;
             }
             &.primary {
-                background: @color-primary + @light;
+                background: @color-white;
                 box-shadow: 0 0 0 8px @color-primary + @medium;
-                color:  @color-white ;
+                color:   @color-primary + @light;
             }
             &.warning {
-                background: @color-warning + @light;
+                background: @font-color-warning;
                 box-shadow: 0 0 0 8px @color-warning + @medium;
-                color:  @font-color-warning ;
+                color:   @color-warning + @light;
             }
             &.danger {
-                background: @color-danger + @light;
+                background: @color-white;
                 box-shadow: 0 0 0 8px @color-danger + @medium;
-                color:  @color-white ;
+                color: @color-danger + @light;
             }
             &.info {
                 background: @color-white;
