--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -6,16 +6,15 @@
 	}
 }
 
-.cbp_tmtimeline{
-	li.setGroup{
-		margin-bottom: 20px;
-		//padding: 5px 20px 5px 5px;
-		.cbp_tmlabel{
-			margin-bottom: 2px;
-			padding: 10px;
-			&:not(:first-child):after{
-				//display: none;
-			}
+
+.setGroup{
+	margin-bottom: 20px;
+	//padding: 5px 20px 5px 5px;
+	.cbp_tmlabel{
+		margin-bottom: 2px;
+		padding: 10px;
+		&:not(:first-child):after{
+			//display: none;
 		}
 	}
 }
